completed Dice game

--- a/Dicee Challenge - Starting Files/index.html
+++ b/Dicee Challenge - Starting Files/index.html
@@ -29,8 +29,9 @@
 
 
   </body>
+  <script src="index.js"  charset="utf-8"></script>
 
   <footer>
-    www 🎲 App Brewery 🎲 com
+    www 🎲 DiceGames 🎲 com
   </footer>
 </html>
