added more awesome projects

--- a/html-personal site/newsform.html
+++ b/html-personal site/newsform.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-    <form action="">
+    <form action="mailto:achonwaechris@gmial.com" method="POST" enctype="text/plain">
         <label >Name</label>
         <input type="text" name="" id=""> <br>
         <label for="">Upload file</label>
