--- a/Pure-html-css-js/mk-web/index.html
+++ b/Pure-html-css-js/mk-web/index.html
@@ -19,9 +19,9 @@
         <li ><a href="Contact.html">Contact us</a></li>
         <li style="float: left;"><a class="Men" href="index.html">WC-WEB</a></li>
     </ul>
-
-
-<div class="mid-contianer">
+<div class="flex-container">
+       
+<div class="mid-contianer"  >
     <div class="topa">
         <img class="img-mia" src="images/mia1.jpg" alt="top-image">
 
@@ -48,7 +48,8 @@
     </div>
 
     
-</div>     
+</div> 
+   </div> 
 <br>
   
 
