updated work on wed

--- a/Pure-html-css-js/wop-web/index.html
+++ b/Pure-html-css-js/wop-web/index.html
@@ -3,14 +3,121 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Portfolio</title>
 </head>
-<body>
+  <body>
     <header>
         <div class="intro">
             <h1>marisa blair</h1>
             <h2>print &amp; web designer</h2>
         </div>
     </header>
+    <!--About-->
+    <div class="wrapper">
+         <section class="about">
+             <div class="about-content">
+                 <h3>Hello see about me</h3>
+                 <p> For now, I’m just going to use Lorem Ipsum placeholder text.
+                      I’ll write the actual content later on.</p>
+                      <a class="button" href="#" target="_blank">view project</a>
+             </div>
+         </section>
+
+         <!--Works-->
+         <h3>my works</h3>
+         <section class="work">
+             <div class="image-area left">
+                <img src="images/lag.png" alt="my first project">
+            </div>
+             <div class="text-box">
+                 <div class="text-box-content">
+                     <h3>UHN Research</h3>
+                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque aliquam lectus vel orci rutrum, vel consequat justo laoreet.</p><a class="button" href="#" target="_blank">view project</a>
+                 </div>
+             </div>
+         </section>
+         <section class="work">
+            <div class="image-area right">
+               <img src="images/lag.png" alt="my first project">
+           </div>
+            <div class="text-box">
+                <div class="text-box-content">
+                    <h3>Training &amp; Development</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque aliquam lectus vel orci rutrum, vel consequat justo laoreet.</p><a class="button" href="#" target="_blank">view project</a>
+                </div>
+            </div>
+        </section>
+        <section class="work">
+            <div class="image-area left">
+               <img src="images/lag.png" alt="my first project">
+           </div>
+            <div class="text-box">
+                <div class="text-box-content">
+                    <h3>Handcrafted Binder</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque aliquam lectus vel orci rutrum, vel consequat justo laoreet.</p><a class="button" href="#" target="_blank">view project</a>
+                </div>
+            </div>
+        </section>
+        <section class="work">
+            <div class="image-area right">
+               <img src="images/gal3.jpg" alt="my first project">
+           </div>
+            <div class="text-box">
+                <div class="text-box-content">
+                    <h3>UHN Research</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque aliquam lectus vel orci rutrum, vel consequat justo laoreet.</p><a class="button" href="#" target="_blank">view project</a>
+                </div>
+            </div>
+        </section>
+        <section class="work">
+            <div class="image-area left">
+               <img src="images/gal1.jpg" alt="my first project">
+           </div>
+            <div class="text-box">
+                <div class="text-box-content">
+                    <h3>UHN Research</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque aliquam lectus vel orci rutrum, vel consequat justo laoreet.</p><a class="button" href="#" target="_blank">view project</a>
+                </div>
+            </div>
+        </section>
+
+
+
+
+
+    </div>
+
+
+<!--Image Divider-->
+        <section class="contact">
+            <div class="contact-content">
+                <h4>Have a project in mind? Email me:<a class="email" href="mailto:marisanblair@gmail.com">marisanblair@gmail.com</a></h4>
+            </div>
+            <img src="#">
+        </section>
+        <div class="image-divider"></div>
+        <!--Footer-->
+        <footer>
+            <div class="footer-content">
+                <p class="credit">&copy; Copyright 2016 Marisa Blair.<br>
+                Designed and Developed by Marisa Blair.</p>
+                <ul class="social">
+                    <li>
+                        <a href="#" target="_blank">twitter.</a>
+                    </li>
+                    <li>
+                        <a href="#" target="_blank">pinterest.</a>
+                    </li>
+                    <li>
+                        <a href="#" target="_blank">youtube.</a>
+                    </li>
+                    <li>
+                        <a href="#" target="_blank">linkedin.</a>
+                    </li>
+                </ul>
+            </div>
+        </footer>
+    
 </body>
 </html>
