--- a/Pure-html-css-js/wop-web/index.html
+++ b/Pure-html-css-js/wop-web/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
         <div class="intro">
-            <h1>marisa blair</h1>
+            <h1>Ebuka Achonwa</h1>
             <h2>print &amp; web designer</h2>
         </div>
     </header>
@@ -17,7 +17,7 @@
     <div class="wrapper">
          <section class="about">
              <div class="about-content">
-                 <h3>Hello see about me</h3>
+                 <h3 class="hthree" >Hi, I'm Ebuka</h3>
                  <p> For now, I’m just going to use Lorem Ipsum placeholder text.
                       I’ll write the actual content later on.</p>
                       <a class="button" href="#" target="_blank">view project</a>
@@ -25,7 +25,7 @@
          </section>
 
          <!--Works-->
-         <h3>my works</h3>
+         <h3 class="hthree" >my works</h3>
          <section class="work">
              <div class="image-area left">
                 <img src="images/lag.png" alt="my first project">
