added fun design to personal portfolio

--- a/Pure-html-css-js/wop-web/index.html
+++ b/Pure-html-css-js/wop-web/index.html
@@ -94,9 +94,10 @@
             <div class="contact-content">
                 <h4>Have a project in mind? Email me:<a class="email" href="mailto:marisanblair@gmail.com">marisanblair@gmail.com</a></h4>
             </div>
-            <img src="#">
         </section>
-        <div class="image-divider"></div>
+        <div class="image-divider" >
+            <img src="images/capture.jpg">
+        </div>
         <!--Footer-->
         <footer>
             <div class="footer-content">
