--- a/Mysite/index.html
+++ b/Mysite/index.html
@@ -23,7 +23,7 @@
         <div class="profile">
           <img class="ebuka-img" src="images/ebuka.jpg" alt="profile-img">
           <h2>Hello.</h2>
-          <p class="intro">I am Computer vision engineer and a web developer, i am co-founder of ivcast. I prefer beer to 
+          <p class="intro">I am Computer vision engineer with good knowledge of web development, i am co-founder of ivcast. I prefer beer to 
               coffer but i enjoy both with Chiken wings</p>
         </div>
         <hr>
