added color to the footer

--- a/TinDog-Store/index.html
+++ b/TinDog-Store/index.html
@@ -239,7 +239,7 @@
     <i class="f-icon fab fa-instagram"></i>
     <i class="f-icon fas fa-envelope"></i>
 
-    <p class="f-p">© Copyright 2018 TinDog</p>
+    <p class="f-p">Made with 💗 For TinDog</p>
 
   </footer>
 
