--- a/Quick_quiz_app/app.html
+++ b/Quick_quiz_app/app.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
     <link rel="stylesheet" href="css/app.css">
     <title>Fun Play</title>
 </head>
 <body>
     <div class="container">
         <div id="home" class="flex-center flex-column">
-            <h1> Fun Quiz</h1>
-            <h1>By James Q Quick</h1>
+            <h1>Fun Quiz</h1>
+            <h1>Made with <strong style="color: red;">💗</strong> 4U</h1>
             <a class="btn" href="game.html">Play</a>
             <a class="btn" href="highscores.html">High Score</a>
         </div>
